@@ -2,37 +2,21 @@
 
 log -p i -t init.d/ramzswap start
 
-sysctl -w vm.swappiness=30;
-
-insmod /system/lib/modules/lzo_compress.ko
-insmod /system/lib/modules/lzo_decompress.ko
-insmod /system/lib/modules/ramzswap.ko num_devices=2 disksize_kb=190824;
-
-for i in 0 1;
-do \
-rzscontrol /dev/block/ramzswap$i --reset;
-rzscontrol /dev/block/ramzswap$i --init;
-busybox swapon -p 1 /dev/block/ramzswap$i;
-done;
-
-
-RESET_ZSWAP() 
-{
-  log -p i -t init.d/ramzswap resetting swap and swap device /dev/block/ramzswap$1
-  busybox swapoff /dev/block/ramzswap$1;
-  rzscontrol /dev/block/ramzswap$1 --reset;
-  rzscontrol /dev/block/ramzswap$1 --init;
-  busybox swapon -p 1 /dev/block/ramzswap$1;
-}
-
 # clean up one swap device every 5h to free unused pages in ramzswap
-(while [ 1 ];
-	do
-          sleep 18000
-	  RESET_ZSWAP 0
-          sleep 18000
-	  RESET_ZSWAP 1
-	  ;
-done &); 
+(while [ 1 ]; do
+sleep 18000;
+log -p i -t init.d/ramzswap resetting swap and swap device /dev/block/ramzswap0;
+/system/xbin/busybox swapoff /dev/block/ramzswap0;
+/system/bin/rzscontrol /dev/block/ramzswap0 --reset;
+/system/bin/rzscontrol /dev/block/ramzswap0 --init;
+/system/xbin/busybox swapon -p 1 /dev/block/ramzswap0;
+sleep 18000;
+log -p i -t init.d/ramzswap resetting swap and swap device /dev/block/ramzswap1;
+/system/xbin/busybox swapoff /dev/block/ramzswap1;
+/system/bin/rzscontrol /dev/block/ramzswap1 --reset;
+/system/bin/rzscontrol /dev/block/ramzswap1 --init;
+/system/xbin/busybox swapon -p 1 /dev/block/ramzswap1;
+done;) &
 
 log -p i -t init.d/ramzswap end
+
